[project]
name = "my-project"
version = "0.1.0"
dependencies = [
    "apexomni==3.0.8",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "cryptography>=3.4.8",
    "web3>=6.0.0",
    "ecdsa>=0.17.0",
    "eth-account>=0.8.0",
    "eth-hash>=0.5.0",
    "eth-typing>=3.0.0",
    "eth-utils>=2.0.0",
    "mpmath>=1.2.0",
    "sympy>=1.9.0",
    "numpy>=1.21.0",
    "pycryptodome>=3.15.0"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"